--- a/app/src/main/res/layout/activity_event_preview_screen.xml
+++ b/app/src/main/res/layout/activity_event_preview_screen.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/event_preview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/preview_page_background"
@@ -9,7 +10,7 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/backButton"
         android:layout_width="55dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
@@ -19,50 +20,46 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/eventTitleText"
         android:layout_width="231dp"
         android:layout_height="82dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="208dp"
         android:fontFamily="sans-serif-black"
-        android:text="Club &amp; Society Festival"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/eventDescriptionText"
         android:layout_width="380dp"
         android:layout_height="35dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="300dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Browse through and learn more about Taylor’s University’s diverse clubs and societies. Free of charge!"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/eventDateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="345dp"
-        android:text="12-21 October 2023"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/eventTimeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="345dp"
         android:layout_marginEnd="16dp"
-        android:text="10am - 6pm"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +77,7 @@
         android:contentDescription="layout of slc walkway"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/eventDetailButton"
         android:layout_width="274dp"
         android:layout_height="53dp"
         android:layout_marginStart="68dp"
