--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,9 +8,12 @@
     android:background="@drawable/home_page_background"
     tools:context=".screens.HomeScreen">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/drawer_button"
+        android:id="@+id/drawerButton"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
@@ -28,21 +32,45 @@
         android:textColor="#F5F5F5"
         android:textSize="34dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/drawer_button"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/dateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="100dp"
         android:text="Monday, 16 Oct"
         android:textColor="#333333"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/drawer_button" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="140dp"
+        android:text="Taylor's University, Subang Jaya"
+        android:textColor="#79333333"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="29dp"
+        android:layout_height="28dp"
+
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="140dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/location_pin" />
 
     <TextView
         android:id="@+id/textView4"
@@ -56,30 +84,6 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="80dp"
-        android:text="Taylor's University, Subang Jaya"
-        android:textColor="#79333333"
-        android:textSize="14dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/drawer_button" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="29dp"
-        android:layout_height="28dp"
-
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/drawer_button"
-        app:srcCompat="@drawable/location_pin" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -101,7 +105,7 @@
         app:srcCompat="@drawable/home_page_search_bar_bg" />
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/searchEvent"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
@@ -117,9 +121,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="374dp"
-        android:layout_height="269dp"
+        android:id="@+id/ongoingEventCard"
+        android:layout_width="375dp"
+        android:layout_height="270dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="328dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,14 +143,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="379dp"
-        android:layout_height="186dp"
+        android:id="@+id/upcomingEventCard"
+        android:layout_width="375dp"
+        android:layout_height="270dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="650dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/upcoming_event_card" />
 
+    <ViewStub
+        android:id="@+id/drawerStub"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout="@layout/activity_home_screen_drawer"
+        android:inflatedId="@+id/drawerLayoutActivity"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
