--- a/mad_assignment2/unify/app/src/main/res/layout/activity_main.xml
+++ b/mad_assignment2/unify/app/src/main/res/layout/activity_main.xml
@@ -11,37 +11,40 @@
         android:id="@+id/textView2"
         android:layout_width="390dp"
         android:layout_height="215dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/box"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="202dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="93dp"
-        android:layout_marginTop="7dp"
+        android:id="@+id/VendorName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="19dp"
         android:layout_marginEnd="95dp"
         android:layout_marginBottom="172dp"
         android:background="@drawable/title_box"
+        android:elevation="15dp"
+        android:text="Vendor Details"
+        android:textColor="@color/secondary"
+        android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.851"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2"
-        app:layout_constraintVertical_bias="1.0"
-        android:elevation="15dp"
-        />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="22dp"
         android:gravity="center"
         android:text="Vendor Details"
         android:textColor="@color/text"
@@ -64,34 +67,21 @@
         />
 
 
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:elevation="15dp"
-        android:text="Inside Scoop"
-        android:textColor="@color/secondary"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+
 
     <ImageButton
-        android:id="@+id/backButton01"
+        android:id="@+id/imageButton"
         android:layout_width="55dp"
         android:layout_height="53dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="16dp"
         android:background="#00000000"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.313"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back_button_icon" />
+        app:srcCompat="@drawable/back_button_icon"
+        tools:ignore="MissingConstraints" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -102,15 +92,15 @@
 
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imageView"
         android:layout_width="354dp"
         android:layout_height="384dp"
         android:elevation="15dp"
-        android:src="@drawable/dic02"
+        android:src="@drawable/directory1"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3"
         tools:visibility="visible" />
@@ -120,63 +110,57 @@
         android:layout_width="135dp"
         android:layout_height="148dp"
         android:layout_marginStart="21dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="234dp"
         android:src="@drawable/insidescoop"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/VendorName"
         app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints"
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/descriptionTextView"
-        android:layout_width="208dp"
-        android:layout_height="70dp"
+        android:id="@+id/description"
+        android:layout_width="209dp"
+        android:layout_height="108dp"
         android:layout_marginStart="9dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="4dp"
         android:text="Inside Scoop is a popular ice \n cream maker known for its \n
-        artisanal approach to crafting \n delectable frozen treats."
+artisanal approach to crafting \n delectable frozen treats. Their \n
+innovative flavors and use of \n high-quality ingredients have \n made them a favorite among
+\n ice cream enthusiasts!!
+"
         android:textAlignment="center"
         android:textColor="@color/text"
         android:textSize="11sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/averageRatingTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.038"
-        app:layout_constraintStart_toEndOf="@id/imageView2"
-        app:layout_constraintTop_toBottomOf="@id/textView4" />
-
-    <TextView
-        android:id="@+id/averageRatingTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="8dp"
-        android:text="Average Rating: 5.0"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
+        app:layout_constraintBottom_toTopOf="@+id/ratingBar1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/VendorName"
+        app:layout_constraintVertical_bias="0.0" />
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/ratingBar1"
         android:layout_width="238dp"
         android:layout_height="43dp"
-        android:layout_marginTop="151dp"
-        android:numStars="5"
+        android:layout_marginTop="113dp"
+
         android:scaleX="0.5"
+
         android:scaleY="0.5"
-        android:stepSize="1.0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
