--- a/app/src/main/res/layout/activity_event_details_screen.xml
+++ b/app/src/main/res/layout/activity_event_details_screen.xml
@@ -45,24 +45,25 @@
 
             <ImageButton
                 android:id="@+id/previewImageButton"
-                android:layout_width="450dp"
-                android:layout_height="270dp"
-                android:layout_marginTop="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="#00000000"
                 android:scaleType="fitCenter"
                 android:src="@drawable/event_card1"
-                android:background="#00000000"
                 android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Events_Details"
-                tools:ignore="MissingConstraints"
                 tools:visibility="visible" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -71,7 +72,6 @@
                 android:layout_width="342dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
                 android:text="Participating Vendors"
                 android:textColor="@color/text"
                 android:textSize="20dp"
@@ -91,8 +91,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/textview6" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
     </LinearLayout>
