--- a/app/src/main/res/layout/activity_event_details_screen.xml
+++ b/app/src/main/res/layout/activity_event_details_screen.xml
@@ -52,7 +52,7 @@
                 android:layout_height="270dp"
                 android:layout_marginTop="20dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/event_card1"
+                android:src="@drawable/ongoing_event_card"
                 android:background="#00000000"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
