--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -16,16 +16,17 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="12dp"
             android:background="@drawable/blue_border_background"
-            >
+            android:padding="12dp"
+            tools:layout_editor_absoluteX="30dp"
+            tools:layout_editor_absoluteY="27dp">
 
             <TextView
                 android:id="@+id/vendor_name_txt"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="44dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="176dp"
+                android:layout_marginTop="44dp"
                 android:text="Vendor Name"
                 android:textColor="#000"
                 android:textSize="20sp"
@@ -37,9 +38,23 @@
                 android:id="@+id/imageUrl_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:text="Type"
                 app:layout_constraintStart_toStartOf="@+id/vendor_name_txt"
                 app:layout_constraintTop_toBottomOf="@+id/vendor_name_txt" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="135dp"
+                android:layout_height="148dp"
+                android:layout_marginStart="16dp"
+                android:src="@drawable/insidescoop"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.36"
+                tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
