--- a/app/src/main/res/layout/activity_home_screen_drawer.xml
+++ b/app/src/main/res/layout/activity_home_screen_drawer.xml
@@ -21,10 +21,11 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
-                android:text="Unify"
+                android:text="UniFy"
                 android:textColor="@color/accent"
-                android:textSize="50dp"
+                android:textSize="34dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -33,63 +34,73 @@
                 android:id="@+id/textView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="12dp"
                 android:gravity="center"
                 android:text="Events at Your Fingertip"
                 android:textColor="#79333333"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <Button
                 android:id="@+id/homeButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="248dp"
-                android:text="Home"
-                android:textSize="35dp"
-                android:textColor="@color/accent"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="84dp"
                 android:background="@color/background"
+                android:text="Home"
+                android:textAllCaps="false"
+                android:textColor="@color/accent"
+                android:textSize="24dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
             <Button
                 android:id="@+id/calendarButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="350dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:background="@color/background"
                 android:text="Calendar"
+                android:textAllCaps="false"
                 android:textColor="@color/accent"
-                android:textSize="35dp"
+                android:textSize="24dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/homeButton" />
 
             <Button
                 android:id="@+id/aboutButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="450dp"
                 android:background="@color/background"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:text="About"
+                android:textAllCaps="false"
                 android:textColor="@color/accent"
-                android:textSize="35dp"
+                android:textSize="24dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/calendarButton" />
 
             <Button
                 android:id="@+id/bookingButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginBottom="40dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:background="@color/background"
-                android:text="Booth Booking -》"
-
+                android:text="Booth Booking 》"
                 android:textColor="@color/cta"
-                android:textSize="35dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/aboutButton" />
+                android:textSize="24dp"
+                android:textAllCaps="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
