--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -95,7 +95,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/taylors_logo" />
 
-    <EditText
+    <TextView
         android:id="@+id/searchEvent"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -105,7 +105,6 @@
         android:gravity="center"
         android:hint="Search Event..."
         android:background="@drawable/search_bar_bg"
-        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
